test/corpus/class_declaration.txt
==================
Simplest class declaration
==================

Class {
	#name : 'TinyLogger'
}

---

(file
  (class_definition
    name: (identifier)))



==================
Class name declaration without space
==================

Class {
	#name: 'TinyLogger'
}

---

(file
  (class_definition
    name: (identifier)))



==================
Class declaration with comment
==================

"
Comment
"
Class {
	#name : 'TinyLogger'
}

---

(file
  (class_definition
    class_comment: (comment)
    name: (identifier)))



==================
Class declaration with superclass
==================

Class {
	#name : 'TinyLogger',
    #superclass: 'TinyAbstractLogger'
}

---

(file
  (class_definition
    name: (identifier)
    superclass: (identifier)))



==================
Class declaration with package, tag and category
==================

Class {
	#name : 'TinyLogger',
	#category : 'Tiny-Logger-Core-Minimal',
	#package : 'Tiny-Logger',
	#tag : 'Core-Minimal'
}

---

(file
  (class_definition
    name: (identifier)
    category: (dashed_name)
    package: (dashed_name)
    tag: (dashed_name)))

==================
Class declaration with one instance variables (simple slots)
==================

Class {
	#name : 'TinyLogger',
	#instVars : [
		'timestampFormatBlock'
	]
}

---

(file
  (class_definition
    name: (identifier)
    slots: (slot_definition
                name: (identifier))))

==================
Class declaration with one slot
==================

Class {
	#name : 'TinyLogger',
	#instVars : [
		'#x => ObservableSlot'
	]
}

---

(file
  (class_definition
    name: (identifier)
    slots: (slot_definition
                name: (identifier)
                definition: (identifier))))

==================
Class declaration with multiple instance variables (simple slots)
==================

Class {
	#name : 'TinyLogger',
	#instVars : [
		'timestampFormatBlock',
		'identationString',
		'depth',
		'loggersMap'
	]
}

---

(file
  (class_definition
    name: (identifier)
    slots: (slot_definition
                name: (identifier))
    slots: (slot_definition
                name: (identifier))
    slots: (slot_definition
                name: (identifier))
    slots: (slot_definition
                name: (identifier))))

==================
Class declaration with multiple slots
==================

Class {
	#name : 'TinyLogger',
	#instVars : [
		'#x => ObservableSlot',
		'#y'
	]
}

---

(file
  (class_definition
    name: (identifier)
    slots: (slot_definition
                name: (identifier)
                definition: (identifier))
    slots: (slot_definition
                name: (identifier))))

==================
Class declaration with one class instance variables (simple slots)
==================

Class {
	#name : 'TinyLogger',
	#classInstVars : [
		'timestampFormatBlock'
	]
}

---

(file
  (class_definition
    name: (identifier)
    class_slots: (slot_definition
                name: (identifier))))

==================
Class declaration with one class slot
==================

Class {
	#name : 'TinyLogger',
	#classInstVars : [
		'#x => ObservableSlot'
	]
}

---

(file
  (class_definition
    name: (identifier)
    class_slots: (slot_definition
                name: (identifier)
                definition: (identifier))))

==================
Class declaration with multiple class instance variables (simple slots)
==================

Class {
	#name : 'TinyLogger',
	#classInstVars : [
		'timestampFormatBlock',
		'identationString',
		'depth',
		'loggersMap'
	]
}

---

(file
  (class_definition
    name: (identifier)
    class_slots: (slot_definition
                name: (identifier))
    class_slots: (slot_definition
                name: (identifier))
    class_slots: (slot_definition
                name: (identifier))
    class_slots: (slot_definition
                name: (identifier))))

==================
Class declaration with multiple class slots
==================

Class {
	#name : 'TinyLogger',
	#classInstVars : [
		'#x => ObservableSlot',
		'#y'
	]
}

---

(file
  (class_definition
    name: (identifier)
    class_slots: (slot_definition
                name: (identifier)
                definition: (identifier))
    class_slots: (slot_definition
                name: (identifier))))

==================
Class declaration with a class variable
==================

Class {
	#name : 'TinyLogger',
	#classVars : [
		'Default'
	]
}

---

(file
  (class_definition
    name: (identifier)
    class_variables: (identifier)))

==================
Class declaration with class variables
==================

Class {
	#name : 'TinyLogger',
	#classVars : [
		'Default',
        'Settings',
        'Facade'
	]
}

---

(file
  (class_definition
    name: (identifier)
    class_variables: (identifier)
    class_variables: (identifier)
    class_variables: (identifier)))
