test/corpus/full_class.txt
==================|||
Full class
==================|||

"
Description
--------------------

I am the main entry point of the project. This project is build with a composite design pattern and I am the composite. I contains subclasses of TinyLeafLogger.

I am a default instance that is used by default in the image when you send #record to a string for example. This instance should be configured by the user before been used (else it will do nothing). 
It is also possible to create another instance with different loggers and to use it. You can also change the default logger objects will use to record logs with the `TinyCurrentLogger` dynamic variable (See example bellow). 

The user can configure the timestamp formating via the #timestampFormatBlock paramater.

Public API and Key Messages
--------------------

- #record: 						Log the parameter of the sub loggers
- #clearLog 						Clear the output of the sub loggers
- #execute:recordedAs: 		Execute a block and log the task when it beging and ends. This will increase the identation of the logging
- #addStdoutLogger 			Add a logger on Stdout
- #addTrascriptLogger 		Add a logger on the Transcript
- #addFileLogger 				Add a logger that will log in a file named `TinyLogger.log`
- #addFileLoggerNamed: 		Add a logger on a file whose name is passed as parameter
- #ensure: 						Variant of all previous #addX message. This one will add the new logger only if there is not equivalent logger already present
- #timestampFormatBlock: 	Give as parameter a block taking a stream as parameter and writing the timestamp you want
- #identationString: 			Allow to customize the identation string. By default it is a tab, but you can use spaces instead.

Examples
--------------------

```Smalltalk
	""Add two file loggers, a stdio logger and a transcript logger to the default logger.""
	TinyLogger default
		addTranscriptLogger;
		addStdoutLogger;
		addFileLoggerNamed: 'Test.log';
		addFileLoggerNamed: 'MyOtherLog.log'.
		
	""Record a string via the default logger""
	'My string' record.
	TinyLogger default record: 'My string'.
	
	""Record with nesting via the default logger""
	self execute: [ 1 to: 10 do: [ :value | value asString record ] ] recordedAs: 'Task with only one nesting.'
	
	self execute: [ 
		1 to: 10 do: [ :value1 | 
			self execute: [
				1 to: value1 do: [ :value2 | value2 asString record ]
				] recordedAs: 'My second nest'
			 ]
		 ] recordedAs: 'My first nest'.
	
	""Record with a non default logger""
	TinyLogger new
		addTranscriptLogger;
		record: 'Test'.
	
	""Change the default logger Objects should use during the execution of a subpart of the system""	
	TinyCurrentLogger value: (TinyLogger new addTranscriptLogger; yourself) during: [ 
		'test' record.
		TinyCurrentLogger value record: 'Test2'
	]
		
	""Change the default timestamp format or identation string""
	TinyLogger default
		timestampFormatBlock: [ :aStream :timestamp | timestamp asDate printOn: aStream. aStream << ' '. ""Cannot use #space because of Stdio streams"" timestamp asTime print24: true on: aStream ];
		identationString: '  '.
```
 
Internal Representation and Key Implementation Points.
--------------------

    Instance Variables
	depth:							<anInteger>		I record the depth level of the nesting.
	loggersMap:					<aDictonary>		I am used to store the loggers. I keep for each kind of loggers a collection of their instances.
	timestampFormatBlock:		<aBlock>			I am a block defining the way the timestamp should be written.
	identationString				<aString>			I am a String used to ident logs.

"
Class {
	#name : 'TinyLogger',
	#superclass : 'TinyAbstractLogger',
	#instVars : [
		'timestampFormatBlock',
		'identationString',
		'depth',
		'loggersMap'
	],
	#classInstVars : [
		'x',
        'y'
	],
	#classVars : [
		'Default'
	],
	#category : 'TinyLogger-Core',
	#package : 'TinyLogger',
	#tag : 'Core'
}

{ #category : 'accessing' }
TinyLogger class >> empty [
	
]

---|||

(file
    (class_definition
        class_comment: (comment)
        name: (identifier)
        superclass: (identifier)
        slots: (slot_definition
          name: (identifier))
        slots: (slot_definition
          name: (identifier))
        slots: (slot_definition
          name: (identifier))
        slots: (slot_definition
          name: (identifier))
        class_slots: (slot_definition
          name: (identifier))
        class_slots: (slot_definition
          name: (identifier))
        class_variables: (identifier)
        category: (dashed_name)
        package: (dashed_name)
        tag: (dashed_name)
        methods: (method_definition
            protocol: (protocol)
            owner: (class_name)
            signature: (unary_selector))))
