test/corpus/method_definition.txt
==================
Empty method definition
==================

x


---

(file
  (method_definition
    signature: (unary_selector)))

==================
Empty tonel method definition
==================

{ #category : 'accessing' }
TinyLogger class >> x [
	
]

---

(file
  (method_definition
    protocol: (protocol)
    owner: (class_name)
    signature: (unary_selector)))

==================
Method with empty temporaries
==================

x
    | |

---

(file
  (method_definition
    signature: (unary_selector)
    body: (temporaries)))

==================
Method with temporaries
==================

x
    | temp1 temp2 |

---

(file
  (method_definition
    signature: (unary_selector)
    body: (temporaries
      (identifier)
      (identifier))))

==================
Method with binary selector
==================

+ aNumber
    

---

(file
  (method_definition
    signature: (binary_selector
                    (binary_operator)
                    (argument))))
==================
Method with binary selector (multiple characters)
==================

+-/\*~<>=@,%|&?!·÷±× aNumber
    

---

(file
  (method_definition
    signature: (binary_selector
                    (binary_operator)
                    (argument))))